Fix image to larger size and align items center.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -9,10 +9,12 @@
 }
 
 .project img {
-    width: 50%;
+    width: 70%;
     border-radius: 8px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .project {
     padding: 10px 0px;
-}
+    text-align: center;
